--- a/App.razor
+++ b/App.razor
@@ -1,10 +1,13 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly">
+﻿@using balazorserver2.Shared
+
+<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        @* <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" /> *@
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainHeader)"/>
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
+        @* <LayoutView Layout="@typeof(MainLayout)"> *@
             <p>Sorry, there's nothing at this address.</p>
-        </LayoutView>
+        @* </LayoutView> *@
     </NotFound>
 </Router>
