--- a/Shared/MainHeader.razor
+++ b/Shared/MainHeader.razor
@@ -18,6 +18,9 @@
                 <NavLink class="nav-link" href="/product-list" Match="NavLinkMatch.Prefix" activeClass="active">Product List</NavLink>
             </li>
             <li class="nav-item">
+                <NavLink class="nav-link" href="/change-car-color" Match="NavLinkMatch.Prefix" activeClass="active">Car</NavLink>
+            </li>
+            <li class="nav-item">
                 <NavLink class="nav-link" href="/admin" Match="NavLinkMatch.Prefix" activeClass="active">ADMIN</NavLink>
             </li>
         </ul>
