--- a/Shared/MainHeader.razor
+++ b/Shared/MainHeader.razor
@@ -21,6 +21,9 @@
                 <NavLink class="nav-link" href="/change-car-color" Match="NavLinkMatch.Prefix" activeClass="active">Car</NavLink>
             </li>
             <li class="nav-item">
+                <NavLink class="nav-link" href="/register" Match="NavLinkMatch.Prefix" activeClass="active">Register</NavLink>
+            </li>
+            <li class="nav-item">
                 <NavLink class="nav-link" href="/admin" Match="NavLinkMatch.Prefix" activeClass="active">ADMIN</NavLink>
             </li>
         </ul>
